--- a/cli2/package.json
+++ b/cli2/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dedent": "^1.2.0",
+    "yargs": "^17.7.2"
+  }
 }
